package org.example.enums;

public enum Acciones {
    BUSCAR_TESORO,
    COMPRAR_COMBUSTIBLE,
    COMPRAR_ESCUDO,
    COMPRAR_ARMA,
}
