package org.example.enums;

public enum Dificultades {
    FACIL,
    MEDIO,
    DIFICIL
}
