package org.example.enums;

public enum TipoDePlaneta {
    NEUTRAL,
    HOSTIL,
    ALIADO,
}
