package org.example.nave;

public class NavePirata extends Nave {
    public double calcularRecompensa() {
        // Implementación
        return 0;
    }
}